# nginx-lua

./: .gitignore  .gitpod.yml  .pylintrc  Makefile  README.md  nginx.conf  vars.mk
cmd/upstream/: main.py  pyproject.toml
cmd/upstream/src/: main.py
cmd/upstream/src/upstream/: __init__.py
cmd/upstream/src/upstream/server/: config.py  entrypoint.py  server.py
cmd/upstream/tests/: test_upstream.py
contrib/makefiles/targets/dependency/: dependency.mk
contrib/makefiles/targets/python/: python.mk
